# cookiecutter-connexion-project

./: .travis.yml  LICENSE  README.md  cookiecutter.json  pytest.ini  requirements-dev.txt  tox.ini
docs/source/: conf.py  index.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .openapi-generator-ignore  README.rst  openapi-generator-options.yaml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/: __about__.py  __main__.py  app.py  di.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/config/: __init__.py  defaults.py  schemas.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/openapi/: openapi.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/web/: resolver.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/web/models/: _schema.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pymodule}}/web/problems/: common.py
{{cookiecutter.project_slug}}/tests/webapi/: conftest.py
